# OVRTrackerSharp

./: .gitignore  .gitmodules  CMakeLists.txt  OVRTracking.sln  README.md  xmake.lua
OVRTracking/: OVRQuaternion.cs  OVRTrackerRole.cs  OVRTracking.cs  OVRTracking.csproj  OVRTransform.cs  OVRVector3.cs  VRError.cs
OVRTracking/Properties/: AssemblyInfo.cs
OVRTrackingNative/: OVRTrackingNative.vcxproj  ovr_tracking.cpp
OVRTrackingSharp/: Class1.cs  OVRQuaternion.cs  OVRTracking.cs  OVRTransform.cs  OVRVector3.cs  VRError.cs
lib/: CMakeLists.txt
lib/shared/: tracker_transmitter.h  tracker_transmitter.hpp
lib/src/: tracker_transmitter.cpp
native/: ovr_tracking.cpp  ovr_tracking.hpp
